Numerous fixes following the code review: H1 title should be "Welcome to MailPoet version 3!", as per wireframes remove logo in top right of the page remove the classes feature-section one-col to the parent new styles for #logger progress bar: ensure that the color and size for the font are the same as our current progress bar. display the progress bar at 100% when the import of subscribers and lists is complete move loadSQL() function in tests/_support/Helper/Database.php remove CSS browser prefixes use AMD module definition to embed the JavaScript remove extra whitespace in JavaScript file remove the redundant functions descriptions rename objectPlugin to mailpoet_mp2_migrator replace private $chunks_size by the constant CHUNK_SIZE add the constant IMPORT_TIMEOUT_IN_SECONDS replace Helpers::mysqlDate() by $datetime->formatTime(time(), \MailPoet\WP\DateTime::DEFAULT_DATE_TIME_FORMAT) make the log messages translatable fix PHPDoc replace Env::$plugin_name by 'mailpoet' in the translation functions use $snake_case for variable names, use lowercaseCamelCase for method names, use CamelCase for class names define MP2 table names as constants add spaces around ternary operators use the models for MP3 entities, instead of counting via raw SQL queries use \ORM::for_table('some_table')::count()

--- a/assets/css/src/mp2migrator.styl
+++ b/assets/css/src/mp2migrator.styl
@@ -21,13 +21,8 @@ progressbar_gradient_to_color = #fd9215
 .ui-progressbar .ui-progressbar-value
   height: 100%
   background-color: progressbar_color
-  background-image: -webkit-linear-gradient(top, progressbar_color, progressbar_gradient_to_color)
-  background-image: -moz-linear-gradient(top, progressbar_color, progressbar_gradient_to_color)
-  background-image: -o-linear-gradient(top, progressbar_color, progressbar_gradient_to_color)
-  background-image: -ms-linear-gradient(top, progressbar_color, progressbar_gradient_to_color)
   background-image: linear-gradient(to bottom, progressbar_color, progressbar_gradient_to_color)
   border-radius: 3px
-  -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.5) inset
   box-shadow: 0 1px 0 rgba(255,255,255,0.5) inset
   border 0
 
